syntax = "proto3";

package fetch_is_sys;

message NameInfo {
  string name = 1;
}

message KernelVersionInfo {
  string kernel_version = 1;
}

message OsVersionInfo {
  string os_version = 1;
}

message LongOsVersionInfo {
  string long_os_version = 1;
}

message HostInfo {
  string host = 1;
}

message UptimeSecondsInfo {
  uint64 uptime_seconds = 1;
}

message DistroIdInfo {
  string distro_id = 1;
}

message SysRequest {
  uint32 hru = 1;
}

service Sys {
  rpc Name(SysRequest) returns (NameInfo) {}
  rpc KernelVersion(SysRequest) returns (KernelVersionInfo) {}
  rpc OsVersion(SysRequest) returns (OsVersionInfo) {}
  rpc LongOsVersion(SysRequest) returns (LongOsVersionInfo) {}
  rpc Host(SysRequest) returns (HostInfo) {}
  rpc UptimeSeconds(SysRequest) returns (UptimeSecondsInfo) {}
  rpc DistroId(SysRequest) returns (DistroIdInfo) {}
}